test page and starting any unicode

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
     <head>
         <title>go guck yourself: beb's test ground</title>
     </head>
-    <script src="guck.js"></script>
     <body>
-
+        <h1>GO GUCK YOURSELF</h1>
+        <h2>beb's test ground</h2>
+        <details>
+            <summary>Main Test</summary>
+            <pre id="big"></pre>
+            <details>
+                <summary>Evaluates to</summary>
+                <pre id="evalsTo"></pre>
+            </details>
+        </details>
+        <details>
+            <summary>The Dictionary</summary>
+            <pre id="output"></pre>
+        </details>
+        <script src="guck.js"></script>
     </body>
 </html>
